address an issue with the photo rotating in the Resume Component overlapping the navbar on iPhone Chrome.

--- a/hamza-foy-portfolio/src/Header/Navigation.css
+++ b/hamza-foy-portfolio/src/Header/Navigation.css
@@ -10,6 +10,7 @@
     background-color: #8ACDE5;
     border-bottom: thick double #34A8D2;
     z-index: 10;
+    transform: translateZ(3001deg)
 }
 
 .logo {
